Добавлена фабрика для создания webClient